# DigiRadio

./: .gitignore  CONTRIBUTING.md  README.md  WHERE-TO-PUT-THESE.md  docs  main.tex
.github/workflows/: ci.yml
Hardware/DATASHEET/: README.md
Hardware/bom/: digiRadio-BOM.xlsx
Hardware/easyeda/: ProPrj_Radio Digitale PCBWay_2026-07-05.epro2  Radio Digitale PCBWay_2026-07-05.epro2
Hardware/pic-and-place/: PickAndPlace_PCB1_2026_07_05.xlsx
Hardware/schematics/: DigitalRadio
Software/: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  apache-header.txt  instructions.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.production
Software/.cursor/rules/: 00-core.mdc  10-cpp-docs.mdc  20-drivers.mdc  30-network-ui.mdc  40-security.mdc  50-testing.mdc
Software/Firmware/: README.md
Software/Firmware/ADAU1701-Firmware/: DigiRadio.hex  DigiRadio.params  DigiRadio.xml  DigiRadio_IC_1.h  DigiRadio_IC_1_PARAM.h  DigiRadio_IC_1_REG.h  DigiRadio_NetList.xml  README.md  SigmaStudioFW.h  defines.h
Software/Firmware/Si4684-Firmware/: README.md
Software/components/core/: CMakeLists.txt
Software/components/core/include/core/: AudioEnhancements.hpp  AudioProfile.hpp  AudioProfileJson.hpp  BiquadCoefficients.hpp  BiquadDesign.hpp  BluetoothJson.hpp  BroadcastLabel.hpp  Bt1035At.hpp  Bt1035PairedDevice.hpp  CompanionChipStatus.hpp  DabDynamicLabelAccumulator.hpp  DeviceIdentity.hpp  DspError.hpp  DspProgram.hpp  DspProgramBlob.hpp  DspProgramError.hpp  EmbeddedBlobReader.hpp  EnhanceLevel.hpp  EnhancementsDesign.hpp  EqBandIndex.hpp  EqBandSettings.hpp  EqProfile.hpp  Eui48.hpp  FirmwareVersion.hpp  FrequencyHz.hpp  FrequencyKHz.hpp  GainDb.hpp  HealthStatus.hpp  HealthStatusJson.hpp  IAudioProfileStore.hpp  IDeviceIdentitySource.hpp  IDsp.hpp  IDspProgramSource.hpp  IFirmwareBlobReader.hpp  ISecureStore.hpp  ITuner.hpp  IdentityError.hpp  IntegrationError.hpp  MixSource.hpp  MixerState.hpp  (+21 more)
Software/components/core/src/: AudioEnhancements.cpp  AudioProfile.cpp  AudioProfileJson.cpp  BiquadCoefficients.cpp  BiquadDesign.cpp  BluetoothJson.cpp  BroadcastLabel.cpp  Bt1035At.cpp  DabDynamicLabelAccumulator.cpp  DeviceIdentity.cpp  DspProgram.cpp  DspProgramBlob.cpp  EmbeddedBlobReader.cpp  EnhanceLevel.cpp  EnhancementsDesign.cpp  EqBandIndex.cpp  EqProfile.cpp  Eui48.cpp  FirmwareVersion.cpp  FrequencyHz.cpp  FrequencyKHz.cpp  GainDb.cpp  HealthStatus.cpp  HealthStatusJson.cpp  MixerState.cpp  OtaAppDescriptor.cpp  PresetSlot.cpp  RdsMetadataAccumulator.cpp  RegisterWrite.cpp  Secret.cpp  Station.cpp  StationList.cpp  StationListJson.cpp  StationName.cpp  TunerJson.cpp  WifiCredentials.cpp  WifiProvisionJson.cpp  WifiSsid.cpp
Software/components/core/test/: CMakeLists.txt  audio_profile_json_test.cpp  biquad_design_test.cpp  broadcast_metadata_test.cpp  bt1035_at_test.cpp  device_identity_test.cpp  dsp_program_blob_test.cpp  embedded_blob_reader_test.cpp  enhancements_design_test.cpp  frequency_khz_test.cpp  health_status_test.cpp  integration_service_test.cpp  ota_app_descriptor_test.cpp  station_list_test.cpp  station_service_test.cpp  tuner_json_test.cpp  wifi_provision_test.cpp
Software/components/drivers/adau1701/: CMakeLists.txt
Software/components/drivers/adau1701/include/adau1701/: Adau1701Driver.hpp  Adau1701Dsp.hpp  Adau1701Error.hpp  Adau1701ParamMap.hpp  EmbeddedDspProgramSource.hpp  FallbackDspProgramSource.hpp  FlashDspProgramSource.hpp
Software/components/drivers/adau1701/src/: Adau1701Driver.cpp  Adau1701Dsp.cpp  EmbeddedDspProgramSource.cpp  FallbackDspProgramSource.cpp  FlashDspProgramSource.cpp  SigmaStudioFW.c  adau1701_program.c  component_stub.cpp
Software/components/drivers/bt1035/: CMakeLists.txt
Software/components/drivers/bt1035/src/: Bt1035Driver.cpp  component_stub.cpp
Software/components/drivers/eeprom24aa/: CMakeLists.txt
Software/components/drivers/eeprom24aa/src/: Eeprom24aa.cpp
Software/components/drivers/si4684/: CMakeLists.txt
Software/components/drivers/si4684/include/si4684/: Si4684Band.hpp  Si4684Driver.hpp  Si4684EmbeddedImages.hpp  Si4684Error.hpp  Si4684Tuner.hpp  Si4684Types.hpp
Software/components/drivers/si4684/src/: Si4684Driver.cpp  Si4684EmbeddedImages.cpp  Si4684Tuner.cpp  component_stub.cpp
Software/components/net/: CMakeLists.txt
Software/components/net/include/net/: NetBootstrap.hpp  NetError.hpp  NetState.hpp  SetupWebServer.hpp  SoftApConfig.hpp  SoftApHost.hpp  StaClient.hpp
Software/components/net/src/: NetBootstrap.cpp  SetupWebServer.cpp  SoftApConfig.cpp  SoftApHost.cpp  StaClient.cpp
Software/components/net/www/: index.html
Software/components/secure_store/: CMakeLists.txt
Software/components/secure_store/include/secure_store/: NvsAudioProfileStore.hpp  (+2 more)
Software/components/secure_store/src/: NvsAudioProfileStore.cpp  NvsPlatformInit.cpp  NvsSecureStore.cpp
Software/components/services/audio/: CMakeLists.txt
Software/components/services/bluetooth/: CMakeLists.txt
Software/components/services/integration/: CMakeLists.txt
Software/components/services/ota/: CMakeLists.txt
Software/components/services/src/: component_stub.cpp
Software/components/services/station/: CMakeLists.txt
Software/components/services/tuner/: CMakeLists.txt
Software/docs/: TODO.md  security-flash-nvs.md
Software/docs/manual/: ch-adau1701.aux  ch-adau1701.tex  ch-api.aux  ch-api.tex  ch-bt1035.aux  ch-bt1035.tex  ch-build.aux  ch-build.tex  ch-classes.aux  ch-classes.tex  ch-firmware.aux  ch-firmware.tex  ch-hardware.aux  ch-hardware.tex  ch-intro.aux  ch-intro.tex  ch-licensing.aux  ch-licensing.tex  ch-si4684.aux  ch-si4684.tex  ch-sigmastudio.aux  ch-sigmastudio.tex  digiradio-manual.sty  manual.aux  manual.fdb_latexmk  manual.fls  manual.listing  manual.tex  manual.toc
Software/main/: CMakeLists.txt  board_pins.hpp  hardware_bootstrap.cpp  hardware_bootstrap.hpp  main.cpp
Software/tools/: check-manual-sync.py  check_si4684_blobs.py  extract_si4684_blob.py  extract_ugreen_radio_cli.py  fetch_si4684_firmware.py  gzip-www.sh  pack_dsp_program.py
docs/: DigiRadio_Manual.tex
(+17 files in other folders)
