idf_component_register(
    SRCS
        "src/FirmwareVersion.cpp"
        "src/HealthStatus.cpp"
        "src/HealthStatusJson.cpp"
        "src/Eui48.cpp"
        "src/DeviceIdentity.cpp"
        "src/Secret.cpp"
        "src/WifiSsid.cpp"
        "src/WifiCredentials.cpp"
        "src/WifiProvisionJson.cpp"
        "src/EmbeddedBlobReader.cpp"
        "src/TunerJson.cpp"
        "src/FrequencyKHz.cpp"
        "src/GainDb.cpp"
        "src/FrequencyHz.cpp"
        "src/EqBandIndex.cpp"
        "src/BiquadCoefficients.cpp"
        "src/BiquadDesign.cpp"
        "src/MixerState.cpp"
        "src/EqProfile.cpp"
        "src/EnhanceLevel.cpp"
        "src/AudioEnhancements.cpp"
        "src/EnhancementsDesign.cpp"
        "src/AudioProfile.cpp"
        "src/AudioProfileJson.cpp"
        "src/Bt1035At.cpp"
        "src/StationName.cpp"
        "src/PresetSlot.cpp"
        "src/Station.cpp"
        "src/StationList.cpp"
        "src/StationListJson.cpp"
        "src/BluetoothJson.cpp"
        "src/BroadcastLabel.cpp"
        "src/RdsMetadataAccumulator.cpp"
        "src/DabDynamicLabelAccumulator.cpp"
    INCLUDE_DIRS "include"
)

target_compile_features(${COMPONENT_LIB} PUBLIC cxx_std_23)
